--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,120 @@
-pygame==2.6.1
+aesara==2.9.4
+aiohttp==3.13.3
+amdsmi==7.0.2
+attr==0.3.2
+audio.wave==4.0.2
+av==16.1.0
+brotli==1.2.0
+brotlicffi==1.2.0.0
+chardet==5.2.0
+checks==0.2
+colorama==0.4.6
+ConfigParser==7.2.0
+coremltools==9.0
+coverage==7.13.1
+cryptography==46.0.3
+ctypes_snappy==1.03
+deeplearning==0.0.1
+defusedxml==0.7.1
+dill==0.4.1
+dl==0.1.0
+docutils==0.22.4
+etcd==2.0.8
+expecttest==0.3.0
+fastparquet==2025.12.0
+fb==0.4.0
+fbscribelogger==0.1.7
+flint==0.0.1
+gdown==5.2.1
+gmpy2==2.2.2
+h2==4.3.0
+h5py==3.15.1
+helion==0.2.10
+HTMLParser==0.0.2
+hypothesis==6.150.2
+importlib_resources==6.5.2
+inflect==7.5.0
+ini2toml==0.15
+ipython==9.9.0
+ipywidgets==8.1.8
+isal==1.8.0
+jax==0.9.0
+jnius==1.1.0
+kerchunk==0.2.9
+keyring==25.7.0
+lmdb==1.7.5
+lxml==6.0.2
+lz4==4.4.5
+lzmaffi==0.3.0
+matchpy==0.5.5
+ml_dtypes==0.5.4
+monkeytype==23.3.0
+moviepy==2.2.1
+mtrand==0.1
+multiset==3.2.0
+mypy==1.19.1
+objgraph==3.6.2
+olefile==0.47
+onnx_ir==0.1.15
+onnxruntime==1.23.2
+onnxscript==0.5.7
+optree==0.18.0
+pandas==3.0.0
+paramiko==4.0.0
+Parser==0.1
+path.py==12.5.0
+pkg1==0.0.3
+psutil==7.2.1
+pulp==3.3.0
+pwlf==2.5.2
+py==1.11.0
+pyarrow==23.0.0
+pycocotools==2.0.11
+pycosat==0.6.6
+pycute==0.1.0
+pydy==0.8.0
+pygit2==1.19.1
+pyglet==2.1.12
+pygraphviz==1.14
+PyInstaller==6.18.0
+pyinstrument==5.1.2
+pymc==5.27.0
+pymc3==3.11.6
+pynvml==13.0.1
+pyodide==0.0.2
+PyOpenGL==3.1.10
+pyOpenSSL==25.3.0
+PyQt6==6.10.2
+pysat==3.2.2
+PySide6==6.10.1
+pytest_run_parallel==0.8.2
+pytest_subtests==0.15.0
+pythran==0.18.1
+pytorch_lightning==2.6.0
+PyYAML==6.0.3
+redis==7.1.0
+requests_kerberos==0.15.0
+safetensors==0.7.0
+sage==0.0.0
+scipy_doctest==2.0.1
+simplejson==3.20.2
+smbprotocol==1.15.0
+Sphinx==9.1.0
+symengine==0.14.1
+tabulate==0.9.0
+theano==1.0.5
+thread==2.0.6
+threadpoolctl==3.6.0
+torch_xla==2.9.0
+torchaudio==2.10.0
+torchrec==1.4.0
+torchvision_extra_decoders==0.0.2
+tqdm==4.67.1
+trove_classifiers==2026.1.14.14
+ujson==5.11.0
+urllib3_secure_extra==0.1.0
+VideoCapture==0.9.5
+xmlrpclib==1.0.1
+xx==3.3.2
+yarl==1.22.0
+z3==0.2.0
